apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: home-assistant
spec:
  type: ExternalName
  externalName: home-assistant.local.hoareau-marion.eu
  ports:
    - name: http
      port: 8123
