apps/home-assistant/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-route
  namespace: home-assistant
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: home-assistant-https   
  hostnames:
    - "home-assistant.hoareau-marion.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: service
          port: 8123
